# radler

./: .clang-format  .clang-tidy  .gitlab-ci.astron.yml  .gitlab-ci.common.yml  .gitlab-ci.ska.yml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  setup.py
cmake/: FindCFITSIO.cmake  FindCasacore.cmake  FindSphinx.cmake  unittest.cmake
cmake/config/: radler-config-version.cmake.in  radler-config.cmake.in  test_config.h.in
cpp/: CMakeLists.txt  component_list.cc  component_list.h  deconvolution_settings.h  deconvolution_table.cc  deconvolution_table.h  deconvolution_table_entry.h  image_set.cc  image_set.h  psf.h  psf_offset.h  radler.cc  radler.h  settings.h  work_table.cc  work_table.h  work_table_entry.h
cpp/algorithms/: deconvolution_algorithm.cc  deconvolution_algorithm.h  generic_clean.cc  generic_clean.h  iuwt_deconvolution.h  iuwt_deconvolution_algorithm.cc  iuwt_deconvolution_algorithm.h  ls_deconvolution.cc  ls_deconvolution.h  more_sane.cc  more_sane.h  multiscale_algorithm.cc  multiscale_algorithm.h  parallel_deconvolution.cc  parallel_deconvolution.h  python_deconvolution.cc  python_deconvolution.h  simple_clean.cc  simple_clean.h  subminor_loop.cc  subminor_loop.h  threaded_deconvolution_tools.cc  threaded_deconvolution_tools.h
cpp/algorithms/iuwt/: image_analysis.cc  image_analysis.h  iuwt_decomposition.cc  iuwt_decomposition.h  iuwt_mask.cc  iuwt_mask.h
cpp/algorithms/multiscale/: multiscale_transforms.cc  multiscale_transforms.h
cpp/algorithms/test/: CMakeLists.txt  runtests.cc  test_simple_clean.cc
cpp/demo/: CMakeLists.txt  multiscale_example.cc
cpp/logging/: controllable_log.h  subimage_logset.h
cpp/math/: dijkstra_splitter.cc  dijkstra_splitter.h  dijkstrasplitter.h  peak_finder.cc  peak_finder.h  rms_image.cc  rms_image.h
cpp/math/test/: CMakeLists.txt  runtests.cc  test_dijkstra_splitter.cc  test_peak_finder.cc
cpp/test/: CMakeLists.txt  imageaccessor.h  runtests.cc  smartptr.h  test_component_list.cc  test_config.h.in  test_deconvolution_table.cc  test_image_set.cc  test_psf.cc  test_psf_offset.cc  test_python_deconvolution.cc  test_radler.cc  test_work_table.cc
cpp/utils/: application.h  casa_mask_reader.cc  casa_mask_reader.h  load_and_store_image_accessor.h  load_image_accessor.h  write_model.h
cpp/utils/test/: CMakeLists.txt  runtests.cc  test_image_accessors.cc
doc/: CMakeLists.txt  Doxyfile.in  build-instructions.rst  conf.py  index.rst  pages-index.html  requirements.txt
doc/tree/: cpp-interface.rst  interfaces-overview.rst  python-interface.rst
doc/tree/cpp/: algorithms.rst  settings.rst
doc/tree/python/: settings.rst
docker/: install_boost.sh  install_fftw.sh  install_hdf5.sh  install_libaec.sh  make_wheels.sh  py310_wheel.docker  ubuntu_20_04_base  ubuntu_22_04_base
documentation/: pages-index.html
python/: CMakeLists.txt  pycomponent_list.cc  pyopaque.h  pyradler.cc  pysettings.cc  pywork_table.cc  pywrappers.cc
python/docstrings/: settings_docstrings.h
python/test/: CMakeLists.txt  test_component_list.py  test_psf.py  test_radler.py  test_settings.py  test_work_table.py
scripts/: clang-tidy-to-junit.py  run-format.sh
